fix episode detail bugs

--- a/typecaster-ui/templates/episode_detail.html
+++ b/typecaster-ui/templates/episode_detail.html
@@ -12,7 +12,7 @@
 {% endif %}
   <div>
     <label for="text">Text:</label>
-    <textarea name="text" value="{{ episode.text }}"></textarea>
+    <textarea name="text" placeholder="{{ episode.text }}"></textarea>
   </div>
   <div>
     <label for="subtitle">Text format:</label>
